@@ -118,6 +118,9 @@ Extension Modules
 Library
 -------
 
+- Patch #1608267: fix a race condition in os.makedirs() is the directory
+  to be created is already there.
+
 - Patch #1610437: fix a tarfile bug with long filename headers.
 
 - Patch #1472877: Fix Tix subwidget name resolution.
